--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+  <app-root style="min-height: 100vh; min-width : 100%; display:grid; align-items: stretch;"></app-root>
 </body>
 </html>
